fix: margin for page titles on small screens

--- a/src/components/TokenLocking/styles.module.css
+++ b/src/components/TokenLocking/styles.module.css
@@ -263,6 +263,10 @@
   .leftReceipt {
     border-bottom: 1px dashed white;
   }
+
+  .pageTitle {
+    margin: 16px;
+  }
 }
 
 .gradientBackground {
